@@ -1,3 +1,9 @@
+2002-05-10  jacob berkman  <jacob@ximian.com>
+
+	* mime-type-info.c (mime_category_info_get_full_description): 
+	(mime_category_info_get_full_name): work around a gcc 2.96 bug
+	(fixes #77121)
+
 2002-05-08  Jody Goldberg <jody@gnome.org>
 
 	* file-types-capplet.c (cb_file_type_dialog_response) : fix path to
